apps/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ExcaliDraw"
    gethomepage.dev/description: "Self-hosted Excalidraw dashboard"
    gethomepage.dev/icon: "excalidraw.png"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/weight: "25"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "excalidraw.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: excalidraw-frontend
          port: 80
